--- a/expence-tracker/frontend/package.json
+++ b/expence-tracker/frontend/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.56.2",
     "@tanstack/react-router": "^1.57.18",
+    "@tanstack/react-table": "^8.20.5",
     "@tanstack/router-devtools": "^1.57.18",
     "@tanstack/router-vite-plugin": "^1.57.15",
     "axios": "^1.7.7",
